tests/invalid/simple/List_CompileFail_4.whiley
void System::main([string] args):
     int x
     int y
     x = 1
     y = x[0]

